@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class IdentityService {
@@ -21,53 +20,40 @@ public class IdentityService {
         String email = request.getEmail();
         String phone = request.getPhoneNumber();
 
-        // 1. Fetch matching contacts [cite: 27]
+        // 1. Find all potential relatives (matches)
         List<Contact> matches = repository.findByEmailOrPhoneNumber(email, phone);
 
-        // CASE: New User [cite: 89]
+        // CASE 1: Brand New User
         if (matches.isEmpty()) {
             Contact newPrimary = saveContact(email, phone, null, Contact.LinkPrecedence.primary);
-            return formatResponse(newPrimary, Collections.emptyList());
+            return formatResponse(newPrimary, List.of(newPrimary));
         }
 
-        // 2. Identify all involved Primaries [cite: 26]
-        Set<Integer> primaryIds = matches.stream()
-                .map(c -> c.getLinkedId() != null ? c.getLinkedId() : c.getId())
-                .collect(Collectors.toSet());
+        // 2. Identify the true primary (the oldest one in the chain)
+        Contact truePrimary = matches.stream()
+                .map(c -> c.getLinkedId() != null ? repository.findById(c.getLinkedId()).orElse(c) : c)
+                .min(Comparator.comparing(Contact::getCreatedAt))
+                .orElseThrow();
 
-        List<Contact> allPrimaries = repository.findAllById(primaryIds).stream()
-                .sorted(Comparator.comparing(Contact::getCreatedAt))
-                .collect(Collectors.toList());
+        // 3. Demote other primaries if they exist in the current matches
+        matches.stream()
+                .filter(c -> c.getLinkPrecedence() == Contact.LinkPrecedence.primary && !c.getId().equals(truePrimary.getId()))
+                .forEach(c -> {
+                    c.setLinkPrecedence(Contact.LinkPrecedence.secondary);
+                    c.setLinkedId(truePrimary.getId());
+                    c.setUpdatedAt(LocalDateTime.now());
+                    repository.save(c);
+                });
 
-        Contact truePrimary = allPrimaries.get(0); // Oldest is primary [cite: 26]
+        // 4. Create new secondary if request contains fresh info
+        boolean isNewInfo = (email != null && matches.stream().noneMatch(c -> email.equals(c.getEmail()))) ||
+                (phone != null && matches.stream().noneMatch(c -> phone.equals(c.getPhoneNumber())));
 
-        // 3. Handle Merging (Primary to Secondary) [cite: 144]
-        if (allPrimaries.size() > 1) {
-            for (int i = 1; i < allPrimaries.size(); i++) {
-                Contact newerPrimary = allPrimaries.get(i);
-                if (!newerPrimary.getId().equals(truePrimary.getId())) {
-                    newerPrimary.setLinkPrecedence(Contact.LinkPrecedence.secondary);
-                    newerPrimary.setLinkedId(truePrimary.getId());
-                    newerPrimary.setUpdatedAt(LocalDateTime.now());
-                    repository.save(newerPrimary);
-
-                    // Re-link children of the demoted primary [cite: 24]
-                    List<Contact> children = repository.findByLinkedId(newerPrimary.getId());
-                    children.forEach(c -> {
-                        c.setLinkedId(truePrimary.getId());
-                        repository.save(c);
-                    });
-                }
-            }
-        }
-
-        boolean isNewEmail = email != null && matches.stream().noneMatch(c -> email.equals(c.getEmail()));
-        boolean isNewPhone = phone != null && matches.stream().noneMatch(c -> phone.equals(c.getPhoneNumber()));
-
-        if (isNewEmail || isNewPhone) {
+        if (isNewInfo) {
             saveContact(email, phone, truePrimary.getId(), Contact.LinkPrecedence.secondary);
         }
 
+        // 5. Gather all related contacts and return
         List<Contact> allRelated = repository.findByLinkedIdOrId(truePrimary.getId(), truePrimary.getId());
         return formatResponse(truePrimary, allRelated);
     }
@@ -79,19 +65,23 @@ public class IdentityService {
     }
 
     private IdentityResponse formatResponse(Contact primary, List<Contact> related) {
-        // LinkedHashSet keeps the primary info at the first position 
+        // LinkedHashSet automatically handles uniqueness and preserves primary order
         Set<String> emails = new LinkedHashSet<>();
-        if (primary.getEmail() != null) emails.add(primary.getEmail());
-        related.stream().map(Contact::getEmail).filter(Objects::nonNull).forEach(emails::add);
-
         Set<String> phones = new LinkedHashSet<>();
+
+        // Add primary values first to guarantee they are at index 0
+        if (primary.getEmail() != null) emails.add(primary.getEmail());
         if (primary.getPhoneNumber() != null) phones.add(primary.getPhoneNumber());
-        related.stream().map(Contact::getPhoneNumber).filter(Objects::nonNull).forEach(phones::add);
+
+        related.forEach(c -> {
+            if (c.getEmail() != null) emails.add(c.getEmail());
+            if (c.getPhoneNumber() != null) phones.add(c.getPhoneNumber());
+        });
 
         List<Integer> secondaryIds = related.stream()
                 .map(Contact::getId)
                 .filter(id -> !id.equals(primary.getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         return IdentityResponse.builder()
                 .contact(IdentityResponse.ContactDetails.builder()
